--- a/src/components/Question.css
+++ b/src/components/Question.css
@@ -1,5 +1,6 @@
 .question {
-    margin: 5px;
+    margin-right: auto;
+    margin-left: auto;
     padding: 5px;
     background-color: blue;
     color: white;
